Fix padding and wrap of Labels section in Template
Issue #5484
*Add top and bottom padding in Labels table cell
*Show View More link when there are more than 5 labels
*Add word-wrap to labels
*Add left padding between Activity and Label sections when page
shrinks
*Change table row border color to #E1E1E1

--- a/awx/ui/client/src/templates/labels/labelsList.block.less
+++ b/awx/ui/client/src/templates/labels/labelsList.block.less
@@ -7,10 +7,11 @@
     align-items: flex-start;
 }
 
-.LabelList-tagContainer,
+
+.LabelList-tagContainer, 
 .LabelList-seeMoreLess {
     display: flex;
-    max-width: 100%;
+    max-width: 200px;
 }
 
 .LabelList-tag {
@@ -22,9 +23,6 @@
     background-color: @default-list-header-bg;
     margin-right: 5px;
     max-width: 100%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 .LabelList-seeMoreLess {
@@ -85,4 +83,10 @@
 
 .LabelList-deleteContainer:hover > .LabelList-tagDelete {
     color: @default-bg;
+}
+
+@media (max-width: 1200px) {
+    .List-tableCell.col-md-4 {
+        padding-left: 40px;
+    }
 }
